--- a/bryft/src/components/RidePost/RidePost.css
+++ b/bryft/src/components/RidePost/RidePost.css
@@ -1,95 +1,225 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
 
-.ride-card {
-    position: relative;
-    width: auto;
-    height: 100px;
-    margin-bottom: 10px;
-    border: 1px solid black;
-    border-radius: 12px !important;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+@media screen and (max-width: 1023px) {
+    .ride-card {
+        position: relative;
+        width: auto;
+        height: 120px;
+        margin-bottom: 10px;
+        border: 1px solid #2D92FF;
+        border-radius: 12px !important;
+    }
+
+    .ride-content {
+        width: 100%;
+        height: 100%;
+    }
+
+    .grid-container {
+        height: auto;
+    }
+
+    .top-left {
+        position: absolute;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        font-family: 'Amiko', sans-serif;
+        top: 0;
+        left: 0;
+        font-size: 16px;
+        max-width: 50%;
+        padding: 10px;
+        align-items: center;
+    }
+    
+    .top-right {
+        position: absolute;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-end;
+        font-family: 'Amiko', sans-serif;
+        top: 0;
+        right: 0;
+        font-size: 14px;
+        padding: 10px;
+    }
+    
+    .bottom-left {
+        position: absolute;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+        font-family: 'Amiko', sans-serif;
+        bottom: 0;
+        left: 0;
+        font-size: 13px;
+        padding: 10px;
+        max-width: 66%;
+    }
+        
+    .bottom-right {
+        position: absolute;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        font-family: 'Amiko', sans-serif;
+        bottom: 0;
+        right: 0;
+        font-size: 15px;
+        padding: 10px;
+    }
+
+    .departure-time {
+        font-size: 13px;
+    }
+
+    .departure-time-text {
+        display: none;
+    }
+
+    .driver-link {
+        color:#439EFF;
+    }
+    
+    .text-container {
+        margin-right: 20px;
+    }
+    
+    .name-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+    
+    .ride-titles {
+        color: #439EFF;
+    }
+    
+    .departure-time {
+        color: #439EFF;
+    }
+    
+    .ride-details-modal {
+        border-radius: 100px;
+    }
+
 }
 
-.ride-card:hover {
-    transform: scale(1.02);
-    border: 2px solid #2D92FF;
 
+@media screen and (min-width: 560px) and (max-width: 1023px) {
+    .departure-time-text {
+        display: flex;
+        margin-right: 6px;
+    }
 }
 
-.ride-card-content {
-    width: 100%;
-    height: 100%;
-}
-
-.grid-container {
-    height: auto;
-}
-
-.top-left {
-    position: absolute;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    font-family: 'Amiko', sans-serif;
-    top: 0;
-    left: 0;
-    font-size: 20px;
-    padding: 10px;
-}
-
-.top-right {
-    position: absolute;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
-    font-family: 'Amiko', sans-serif;
-    top: 0;
-    right: 0;
-    font-size: 15px;
-    padding: 10px;
-}
-
-.bottom-left {
-    position: absolute;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
-    font-family: 'Amiko', sans-serif;
-    bottom: 0;
-    left: 0;
-    font-size: 15px;
-    padding: 10px;
-}
-
-.bottom-right {
-    position: absolute;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    font-family: 'Amiko', sans-serif;
-    bottom: 0;
-    right: 0;
-    font-size: 15px;
-    padding: 10px;
-}
-
-.driver-link {
-    color:black;
-}
-
-.driver-link:hover {
-    color:blue;
-    text-decoration: underline;
-}
-
-.text-container {
-    margin-right: 20px;
-}
-
-.name-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
+@media screen and (min-width: 1024px) {
+    .ride-card {
+        position: relative;
+        width: auto;
+        height: 100px;
+        margin-bottom: 10px;
+        border: 1px solid black;
+        border-radius: 12px !important;
+        cursor: pointer;
+        transition: transform 0.3s ease;
+    }
+    
+    .ride-card:hover {
+        transform: scale(1.02);
+        border: 2px solid #2D92FF;
+    
+    }
+    
+    .ride-card-content {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .grid-container {
+        height: auto;
+    }
+    
+    .top-left {
+        position: absolute;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        font-family: 'Amiko', sans-serif;
+        top: 0;
+        left: 0;
+        font-size: 20px;
+        padding: 10px;
+        align-items: center;
+    }
+    
+    .top-right {
+        position: absolute;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-end;
+        font-family: 'Amiko', sans-serif;
+        top: 0;
+        right: 0;
+        font-size: 15px;
+        padding: 10px;
+    }
+    
+    .bottom-left {
+        position: absolute;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+        font-family: 'Amiko', sans-serif;
+        bottom: 0;
+        left: 0;
+        font-size: 15px;
+        padding: 10px;
+    }
+    
+    .bottom-right {
+        position: absolute;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        font-family: 'Amiko', sans-serif;
+        bottom: 0;
+        right: 0;
+        font-size: 15px;
+        padding: 10px;
+    }
+    
+    .driver-link {
+        color:black;
+    }
+    
+    .driver-link:hover {
+        color:#439EFF;
+        text-decoration: underline;
+    }
+    
+    .text-container {
+        margin-right: 20px;
+    }
+    
+    .name-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+    
+    .ride-titles {
+        color: #439EFF;
+    }
+    
+    .departure-time {
+        color: #439EFF;
+    }
+    
+    .ride-details-modal {
+        border-radius: 100px;
+    }
 }
